src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_health.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 419
expression: normalized
---
{
  "ok": true,
  "result": {
    "status": "healthy",
    "ts": "<TIMESTAMP>",
    "ws": {
      "broadcastDropTotal": 0,
      "connectionCount": 1,
      "matrixVerificationRateLimitDropTotal": 0,
      "maxBufferedBytes": 1572864
    }
  }
}
