src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_last_heartbeat.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 442
expression: normalized
---
{
  "ok": true,
  "result": {
    "stub": true
  }
}
