src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_plugins_bins.snap
---
source: src/server/ws/golden_tests.rs
expression: normalized
---
{
  "ok": true,
  "result": {
    "bins": []
  }
}
