src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 384
expression: normalized
---
{
  "ok": true,
  "result": {
    "channels": {
      "connected": 0,
      "total": 0
    },
    "runtime": {
      "arch": "<ARCH>",
      "name": "carapace",
      "platform": "<PLATFORM>"
    },
    "sessions": {
      "count": "<SESSION_COUNT>",
      "recent": "<RECENT_LIST>"
    },
    "status": "ok",
    "ts": "<TIMESTAMP>",
    "uptimeMs": "<TIMESTAMP>",
    "version": "<VERSION>"
  }
}
