src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_system_presence.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 700
expression: normalized
---
{
  "ok": true,
  "result": [
    {
      "mode": "test",
      "platform": "<PLATFORM>",
      "reason": "connect",
      "roles": [
        "admin"
      ],
      "scopes": [],
      "ts": "<TIMESTAMP>",
      "version": "<VERSION>"
    }
  ]
}
