src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_update_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 601
expression: normalized
---
{
  "ok": true,
  "result": {
    "autoUpdate": true,
    "channel": "stable",
    "checking": false,
    "currentVersion": "<VERSION>",
    "downloadUrl": null,
    "installing": false,
    "lastCheckAt": null,
    "lastError": null,
    "latestVersion": null,
    "releaseNotes": null,
    "resumePending": false,
    "startupHealthFailure": null,
    "startupHealthLastError": null,
    "transactionAttempt": null,
    "transactionLastError": null,
    "transactionState": null,
    "transactionVersion": null,
    "updateAvailable": false
  }
}
